@@ -2,7 +2,7 @@
 
 /**
  * Controls what you see in the beaker.
- * This includes the ''H3O+/OH- ratio' and 'Molecule count' representations.
+ * This includes the 'H3O+/OH- ratio' and 'Molecule count' representations.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -18,6 +18,7 @@ define( function( require ) {
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
+  var RatioNode = require( 'PH_SCALE/common/view/RatioNode' );
   var Shape = require( 'KITE/Shape' );
   var SubSupText = require( 'SCENERY_PHET/SubSupText' );
   var Text = require( 'SCENERY/nodes/Text' );
@@ -55,8 +56,8 @@ define( function( require ) {
     var separator = new Line( 0, 0, Math.max( moleculeCountCheckBox.width, ratioCheckBox.width ), 0, { stroke: 'gray' } );
 
     var children = [ ratioCheckBox, separator, moleculeCountCheckBox ];
-    if ( !window.phetcommon.getQueryParameter( 'dev' ) ) {
-      children = [ moleculeCountCheckBox ]; //TODO temporarily hide the ratio feature until it's usable
+    if ( !window.phetcommon.getQueryParameter( 'dev' ) || RatioNode.FEATURE_VISIBLE ) {
+      children = [ moleculeCountCheckBox ];
     }
 
     var content = new VBox( {
