@@ -26,6 +26,7 @@ define( function( require ) {
   var Util = require( 'DOT/Util' );
 
   // constants
+  var FEATURE_VISIBLE = false; // determines whether this feature is visible in the production version
   var ACID_PH_THRESHOLD = 6;
   var BASE_PH_THRESHOLD = 8;
   var NUM_PARTICLES_AT_PH7 = 100;
